# processor-simulator

./: .gitignore  CMakeLists.txt  README.md  test.asm
.github/workflows/: c-tests.yml  ci.yml
config/: InstructionMappings.config
include/: mem_manager.h  word.h
include/GUI/: gui_utils.h
include/config_loader/: config_loader.h
include/datapath/: datapath.h
include/file_parser/: file_parser.h
include/log/: logger.h  logger_config.h
include/memory_management/: mem_manager.h  word.h
include/parser/: functions.h  parser.h  word_parser.h
lib/: mem_manger.c  mem_test.c  parser.c
libs/GUI/: gui_main.c  gui_utils.c
libs/config_loader/: config_loader.c
libs/datapath/: datapath.c
libs/file_parser/: file_parser.c
libs/log/: logger.c  logger.h
libs/memory_management/: mem_manager.c  word.c
libs/parser/: functions.c  parser.c  preParser.c  word_parser.c
libs/parser_part1/: parser_part1.c
libs/util/: path.c  path.h
scripts/: precompile.cpp  run.bat  run.sh  run_precomile.bat  run_precompile.sh  run_test.bat  run_test.sh  run_tests.bat  run_tests.sh
src/: main.c
test/: CMakeLists.txt  test_framework.h
test/data/: test.asm  test_config.config  test_program.asm  valid_test_config.config
test/functional/: test_branch_instructions.c  test_branch_instructions_runner.c  test_full_pipeline.c  test_instruction_pipeline.c  test_instruction_pipeline_runner.c  test_memory_operations.c  test_memory_operations_runner.c  test_processor_pipeline.c
test/unit/: test_branch_instructions.c  test_config_loader.c  test_file_parser.c  test_instructions.c  test_mem_manager.c  test_parse_instruction.c  test_parser.c  test_path_utils.c
test/unit/config_loader/: test_config_load.c  test_config_loader_runner.c
test/unit/file_parser/: test_file_parser.c  test_file_parser_runner.c
test/unit/instructions/: test_functions.c  test_functions_runner.c
test/unit/memory_management/: test_mem_manager.c  test_mem_manager_runner.c  test_word.c
test/unit/parser/: test_word_parser.c  test_word_parser_add.c  test_word_parser_and.c  test_word_parser_lsl.c  test_word_parser_lsr.c  test_word_parser_movi.c  test_word_parser_mul.c  test_word_parser_runner.c  test_word_parser_sub.c
test/unit/parser_2/: test_word_parser_jeq.c  test_word_parser_jeq_not_equal.c  test_word_parser_jmp.c  test_word_parser_movm.c  test_word_parser_movr.c  test_word_parser_runner_2.c  test_word_parser_xori.c
test/unit/util/: test_path.c  test_path_runner.c
